--- a/soverance.com/Views/Home/Consulting.cshtml
+++ b/soverance.com/Views/Home/Consulting.cshtml
@@ -93,7 +93,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInDown" data-wow-duration="1s">
                 <div class="item gold text-center">
                     <div class="ptb30 fsize-24 fweight-700 font-agency uppercase color-white">
-                        Web Hosting Plan
+                        Azure Consulting
                     </div>
                     <div class="current-bl color-white pt25 pb20">
                         <div class="font-agency fweight-700 lheight-30">
@@ -104,8 +104,8 @@
                         </div>
                     </div>
                     <div class="price-content equal-height">
-                        <div class="item-list">Complete web hosting service for small business.</div>
-                        <div class="item-list">Host your application on Soverance servers in Microsoft&#39;s Azure cloud.</div>
+                        <div class="item-list">Complete cloud services with Azure for small business.</div>
+                        <div class="item-list">Host your application in Microsoft&#39;s Azure cloud.</div>
                         <div class="item-list">Guaranteed high availability with unlimited 24 x 7 support.</div>
                     </div>
                     <div class="text-center pb60">
@@ -116,7 +116,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInRight" data-wow-duration="2s">
                 <div class="item platinum text-center">
                     <div class="ptb30 fsize-24 fweight-700 font-agency uppercase color-white">
-                        Backup Plan
+                        On-Prem Consulting
                     </div>
                     <div class="current-bl color-white pt25 pb20">
                         <div class="font-agency fweight-700 lheight-30">
@@ -127,8 +127,8 @@
                         </div>
                     </div>
                     <div class="price-content equal-height">
-                        <div class="item-list">Soverance will serve as your off-site backup provider.</div>
-                        <div class="item-list">Store your data securely in geo-redundant cloud containers.</div>
+                        <div class="item-list">Audit your small business network performance and security.</div>
+                        <div class="item-list">Design automated solutions for better user experiences.</div>
                         <div class="item-list">24 x 7 disaster recovery support.</div>
                     </div>
                     <div class="text-center pb60">
