Removed webkit stroke
because it looked great in Edge, but looked awful in Chrome, and didn't work at all in Firefox...

--- a/soverance.com/Views/Home/Index.cshtml
+++ b/soverance.com/Views/Home/Index.cshtml
@@ -749,7 +749,7 @@
                                                  data-tabletlandscape="1" data-mobileportrait="1" data-mobilelandscape="1"
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="50" data-plugin="rendered">
-                                                <div id="n2-ss-4item1" class="n2-font-be0a516f76efd05e36733289aaf2a6de-hover   n2-ow" style="display:block; -webkit-text-stroke-width: 0.75px; -webkit-text-stroke-color: black;">Welcome to</div>
+                                                <div id="n2-ss-4item1" class="n2-font-be0a516f76efd05e36733289aaf2a6de-hover   n2-ow" style="display:block;">Welcome to</div>
                                             </div>
                                             <div class="n2-ss-layer n2-ow" style="margin:0em 0em 0em 0em ;overflow:visible;" data-pm="normal" data-desktopportraitmargin="0|*|0|*|0|*|0|*|px+"
                                                  data-desktopportraitheight="0" data-has-maxwidth="0" data-desktopportraitmaxwidth="0"
@@ -760,7 +760,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="50" data-plugin="rendered">
                                                 <div id="n2-ss-4item2" class="n2-font-e5e826a3ba83ea69731d81df1c0fa84d-hover n2-style-01ddb7ca1f625e69d1a2381951aa5192-heading   n2-ow"
-                                                     style="display:block; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black;">Soverance Studios</div>
+                                                     style="display:block;">Soverance Studios</div>
                                             </div>
                                             <div class="n2-ss-layer n2-ow" style="margin:2.5em 0em 0em 0em ;max-width: 955px;overflow:visible;" data-pm="normal" data-desktopportraitmargin="40|*|0|*|0|*|0|*|px+"
                                                  data-desktopportraitheight="0" data-has-maxwidth="1" data-desktopportraitmaxwidth="955"
@@ -771,7 +771,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="90" data-plugin="rendered">
                                                 <div class="n2-ow n2-ow-all n2-ss-desktop n2-ss-mobile n2-ss-tablet">
-                                                    <p class="n2-font-7753338b51c1a1442e4b2825494fb15e-paragraph   n2-ow" style="-webkit-text-stroke-width: 0.2px; -webkit-text-stroke-color: black;">
+                                                    <p class="n2-font-7753338b51c1a1442e4b2825494fb15e-paragraph   n2-ow" style="">
                                                         An independent video game company
                                                         <br />
                                                     </p>
@@ -820,7 +820,7 @@
                                                  data-tabletlandscape="1" data-mobileportrait="1" data-mobilelandscape="1"
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="50" data-plugin="rendered">
-                                                <div id="n2-ss-4item5" class="n2-font-be0a516f76efd05e36733289aaf2a6de-hover   n2-ow" style="display:block; -webkit-text-stroke-width: 0.75px; -webkit-text-stroke-color: black;">Available now on Steam</div>
+                                                <div id="n2-ss-4item5" class="n2-font-be0a516f76efd05e36733289aaf2a6de-hover   n2-ow" style="display:block;">Available now on Steam</div>
                                             </div>
                                             <div class="n2-ss-layer n2-ow" style="margin:0em 0em 0em 0em ;overflow:visible;" data-pm="normal" data-desktopportraitmargin="0|*|0|*|0|*|0|*|px+"
                                                  data-desktopportraitheight="0" data-has-maxwidth="0" data-desktopportraitmaxwidth="0"
@@ -831,7 +831,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="50" data-plugin="rendered">
                                                 <div id="n2-ss-4item6" class="n2-font-e5e826a3ba83ea69731d81df1c0fa84d-hover n2-style-01ddb7ca1f625e69d1a2381951aa5192-heading   n2-ow"
-                                                     style="display:block; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black;">Ethereal Legends</div>
+                                                     style="display:block;">Ethereal Legends</div>
                                             </div>
                                             <div class="n2-ss-layer n2-ow" style="margin:2.5em 0em 0em 0em ;max-width: 955px;overflow:visible;" data-pm="normal" data-desktopportraitmargin="40|*|0|*|0|*|0|*|px+"
                                                  data-desktopportraitheight="0" data-has-maxwidth="1" data-desktopportraitmaxwidth="955"
@@ -842,7 +842,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="90" data-plugin="rendered">
                                                 <div class="n2-ow n2-ow-all n2-ss-desktop n2-ss-mobile n2-ss-tablet">
-                                                    <p class="n2-font-7753338b51c1a1442e4b2825494fb15e-paragraph   n2-ow" style="-webkit-text-stroke-width: 0.2px; -webkit-text-stroke-color: black;">
+                                                    <p class="n2-font-7753338b51c1a1442e4b2825494fb15e-paragraph   n2-ow" style="">
                                                         A powerful foe has descended upon the world of Arcadia. 
                                                         <br />The Ethereal Knights, protectors of the realm, have nearly all been destroyed.
                                                         <br />Only you remain.
@@ -892,7 +892,7 @@
                                                  data-tabletlandscape="1" data-mobileportrait="1" data-mobilelandscape="1"
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="50" data-plugin="rendered">
-                                                <div id="n2-ss-4item9" class="n2-font-be0a516f76efd05e36733289aaf2a6de-hover   n2-ow" style="display:block; -webkit-text-stroke-width: 0.75px; -webkit-text-stroke-color: black;">Powered by</div>
+                                                <div id="n2-ss-4item9" class="n2-font-be0a516f76efd05e36733289aaf2a6de-hover   n2-ow" style="display:block;">Powered by</div>
                                             </div>
                                             <div class="n2-ss-layer n2-ow" style="margin:0em 0em 0em 0em ;overflow:visible;" data-pm="normal" data-desktopportraitmargin="0|*|0|*|0|*|0|*|px+"
                                                  data-desktopportraitheight="0" data-has-maxwidth="0" data-desktopportraitmaxwidth="0"
@@ -903,7 +903,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="50" data-plugin="rendered">
                                                 <div id="n2-ss-4item10" class="n2-font-e5e826a3ba83ea69731d81df1c0fa84d-hover n2-style-01ddb7ca1f625e69d1a2381951aa5192-heading   n2-ow"
-                                                     style="display:block; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black;">Unreal Engine</div>
+                                                     style="display:block;">Unreal Engine</div>
                                             </div>
                                             <div class="n2-ss-layer n2-ow" style="margin:2.5em 0em 0em 0em ;max-width: 955px;overflow:visible;" data-pm="normal" data-desktopportraitmargin="40|*|0|*|0|*|0|*|px+"
                                                  data-desktopportraitheight="0" data-has-maxwidth="1" data-desktopportraitmaxwidth="955"
@@ -914,7 +914,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="90" data-plugin="rendered">
                                                 <div class="n2-ow n2-ow-all n2-ss-desktop n2-ss-mobile n2-ss-tablet">
-                                                    <p class="n2-font-7753338b51c1a1442e4b2825494fb15e-paragraph   n2-ow" style="-webkit-text-stroke-width: 0.2px; -webkit-text-stroke-color: black;">
+                                                    <p class="n2-font-7753338b51c1a1442e4b2825494fb15e-paragraph   n2-ow" style="">
                                                         We use Epic&#39;s Unreal Engine technology to bring new ideas to life                                                       
                                                         <br />
                                                     </p>
