Updated Eth Version History
and some broken links

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Versions.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Versions.cshtml
@@ -60,22 +60,22 @@
                                     </div>
                                     <div class="table-cell valign-top text-right">
                                         <div class="fsize-14 fweight-700 uppercase">
-                                            Latest:  1.3
+                                            Latest Version :    1.3
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <br />
-                            <p>Major project milestone dates and versions are liseted here.</p>
+                            <p>Major project milestone dates and versions are listed here.</p>
+                            <p>For a full version history, complete with update notes, <a href="https://soverance.sharepoint.com/:w:/g/EQngmza2gbxEibCV-egTqiwBCwmHBCBWve9yZgdl-GLw8Q?e=Fs1O5J">please see this document</a>.</p>                            
                             <ul>
-                                <li>05/06/2018 - <a href="https://soverance.com/ethereal-version-update-1-3/">Version 1.3</a>  -  <span style="color: #ff6600;">Current Version</span></li>
                                 <li>02/21/2017 - <a href="http://soverance.com/ethereal-legends-now-available-on-steam/">Version 1.0</a>  -  Steam Release</li>
-                                <li>08/27/2016 - <a href="http://soverance.com/ethereal-legends-now-open-source/">Version 0.8  (Beta)</a>  -  Open Sourced C++</li>
-                                <li>01/01/2016 - <a href="http://soverance.com/ethereal-alpha-test/">Version 0.6  (Alpha)</a></li>
+                                <li>08/27/2016 - <a href="http://soverance.com/ethereal-legends-now-open-source/">Version 0.8  (Beta)</a>  -  First beta test, Open Source C++</li>
+                                <li>01/01/2016 - <a href="http://soverance.com/ethereal-alpha-test/">Version 0.6  (Alpha)</a>  -  First alpha test</li>
                                 <li>09/15/2015 - <a href="http://soverance.com/ethereal-on-square-enix-collective/">Version 0.2  (Pre-Alpha)</a>  -  Oculus Share / Square Enix Collective Campaign</li>
                                 <li>08/11/2015 - <a href="http://soverance.com/ethereal-pre-alpha/">Version 0.1  (Pre-Alpha)</a>  -  Steam Greenlight</li>
                                 <li>11/23/2014 - <a href="http://soverance.com/project-ethereal/">Project Ethereal</a>  (UE4 Prototype)</li>
-                                <li>06/25/2013 - <a href="http://soverance.com/soldier-alpha/">Project Ethereal</a>  (UDK Prototype)</li>
+                                <li>06/25/2013 - <a href="http://soverance.com/soldier-alpha/">Project Aegis</a>  (UDK Prototype)</li>
                             </ul>
                         </div>
                         <div class="bottom-info-bl">
