--- a/soverance.com/Views/Home/Games.cshtml
+++ b/soverance.com/Views/Home/Games.cshtml
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="/ethereal/" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 Ethereal Legends
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="/endlessreach/" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 Endless Reach Mobile
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
