--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -210,7 +210,7 @@
         <div class="table">
             <div class="table-row">
                 <div class="table-cell valign-middle text-left">
-                    <a href="index.html" class="logo">
+                    <a href="/home/" class="logo">
                         <img src="~/images/logos/soverance.png" alt="" class="img-responsive inline-block">
                     </a>
                 </div>
