Eth Loot Table fix
for public access.

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Loot.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Loot.cshtml
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
                             <div class="mt20">
-                                <iframe width="840" height="660" frameborder="0" scrolling="no" src="https://soverance.sharepoint.com/_layouts/15/Doc.aspx?sourcedoc={503471b5-336c-4df1-a28e-882e0f98b3b8}&action=embedview&ActiveCell='Enemy%20Loot'!A1&Item='Enemy%20Loot'!A1%3AF45&wdInConfigurator=True"></iframe>
+                                <iframe width="840" height="660" frameborder="0" scrolling="no" src="https://soverance.sharepoint.com/:x:/g/EbVxNFBsM_FNoo6ILg-Ys7gB8JL24gY09cOdMozBrd-F7g?e=hCfu3X&action=embedview&ActiveCell='Enemy%20Loot'!A1&Item='Enemy%20Loot'!A1%3AF45&wdInConfigurator=True"></iframe>
                             </div>
                             <hr />
                             <img class="img-responsive mlr-auto mb20" src="~/images/games/ethereal/SignetGear.jpg" alt="" width="506" height="145" />
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                             <p class="mt60">
-                                <iframe width="840" height="660" frameborder="0" scrolling="no" src="https://soverance.sharepoint.com/_layouts/15/Doc.aspx?sourcedoc={503471b5-336c-4df1-a28e-882e0f98b3b8}&action=embedview&ActiveCell='Inventory'!A1&Item='Inventory'!A1%3AO118&wdInConfigurator=True"></iframe>
+                                <iframe width="840" height="660" frameborder="0" scrolling="no" src="https://soverance.sharepoint.com/:x:/g/EbVxNFBsM_FNoo6ILg-Ys7gB8JL24gY09cOdMozBrd-F7g?e=hCfu3X&action=embedview&ActiveCell='Inventory'!A1&Item='Inventory'!A1%3AO118&wdInConfigurator=True"></iframe>
                             </p>
                         </div>
                         <div class="bottom-info-bl">
