updated eth version milestone links
because they were broken now that wordpress is offline.

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Versions.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Versions.cshtml
@@ -69,13 +69,13 @@
                             <p>Major project milestone dates and versions are listed here.</p>
                             <p>For a full version history, complete with update notes, <a href="https://soverance.sharepoint.com/:w:/g/EQngmza2gbxEibCV-egTqiwBCwmHBCBWve9yZgdl-GLw8Q?e=Fs1O5J">please see this document</a>.</p>                            
                             <ul>
-                                <li>02/21/2017 - <a href="http://soverance.com/ethereal-legends-now-available-on-steam/">Version 1.0</a>  -  Steam Release</li>
-                                <li>08/27/2016 - <a href="http://soverance.com/ethereal-legends-now-open-source/">Version 0.8  (Beta)</a>  -  First beta test, Open Source C++</li>
-                                <li>01/01/2016 - <a href="http://soverance.com/ethereal-alpha-test/">Version 0.6  (Alpha)</a>  -  First alpha test</li>
-                                <li>09/15/2015 - <a href="http://soverance.com/ethereal-on-square-enix-collective/">Version 0.2  (Pre-Alpha)</a>  -  Oculus Share / Square Enix Collective Campaign</li>
-                                <li>08/11/2015 - <a href="http://soverance.com/ethereal-pre-alpha/">Version 0.1  (Pre-Alpha)</a>  -  Steam Greenlight</li>
-                                <li>11/23/2014 - <a href="http://soverance.com/project-ethereal/">Project Ethereal</a>  (UE4 Prototype)</li>
-                                <li>06/25/2013 - <a href="http://soverance.com/soldier-alpha/">Project Aegis</a>  (UDK Prototype)</li>
+                                <li>02/21/2017 - <b>Version 1.0</b>  -  Steam Release</li>
+                                <li>08/27/2016 - <b>Version 0.8  (Beta)</b>  -  First beta test, Open Source C++</li>
+                                <li>01/01/2016 - <b>Version 0.6  (Alpha)</b>  -  First alpha test</li>
+                                <li>09/15/2015 - <b>Version 0.2  (Pre-Alpha)</b>  -  Oculus Share / Square Enix Collective Campaign</li>
+                                <li>08/11/2015 - <b>Version 0.1  (Pre-Alpha)</b>  -  Steam Greenlight</li>
+                                <li>11/23/2014 - <b>Project Ethereal</b>  (UE4 Prototype)</li>
+                                <li>06/25/2013 - <a href="/blog/post/project-aegis"><b>Project Aegis</b></a>  (UDK Prototype)</li>
                             </ul>
                         </div>
                         <div class="bottom-info-bl">
