Updated my team page
with my resume

--- a/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
@@ -100,34 +100,26 @@
                                         Much of my professional career has been spent building startups and helping small businesses succeed through Microsoft technology.
                                         I started my first business in 2002 - a skatepark built inside an old marble factory - and I&#39;ve been building companies ever since.
                                     </p>
-                                    <p>
+                                    <p class="lheight-30 mt20">
                                         As a member of the Microsoft Partner Network, I can help your company design and deploy a computer network optimzed for small business,
                                         using world-class cloud solutions that integrate with your existing on-prem infrastructure. <a href="/consulting">Check out all of my available services.</a>
-                                        To keep my skills on the cutting edge, I use Unreal Engine technology to bring my ideas to life as innovative gaming experiences for platforms such as Steam, PlayStation, XBox, and Oculus VR.
+                                        I am passionate about computer programming, and I love using my skills to help businesses solve problems through process automation and custom applications.
+                                        As a fun way to keep my skills on the cutting edge, I use Unreal Engine technology to bring my ideas to life as innovative gaming experiences for platforms such as Steam, PlayStation, XBox, and Oculus VR.
 
                                     </p>
-                                    <p>
+                                    <p class="lheight-30 mt20">
                                         Thanks for taking the time to check out my work!
                                     </p>
                                 </div>
                                 <div class="mt60">
-                                    <blockquote class="mt50 p60 text-center">
-                                        <div class="fsize-18 italic ptb30">
-                                            «Whether you think you can, or you think you can't... you're right.»
-                                        </div>
-                                        <div class="table mb0 pb30">
-                                            <div class="table-row">
-                                                <div class="table-cell valign-middle">
-                                                    <div class="fsize-24 fweight-700 font-agency color-white uppercase">
-                                                        Henry Ford
-                                                    </div>
-                                                    <div class="fsize-14 fweight-700 uppercase color-1">
-                                                        Business Magnate
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </blockquote>
+                                    <div class="position mt10">
+                                        <h5 class="fsize-32 fweight-700 font-agency uppercase">Resume</h5>
+                                    </div>
+                                    <a href="https://soverance-my.sharepoint.com/:w:/p/scott_mccutchen/Ect0wgQM5jtEg3TKJ6djfH4BHJzxjKzaNYnahxRFGgvy6g?e=mxPVtR" class="fsize-14 fweight-700 uppercase">
+                                        Scott McCutchen Resume - Word Online
+                                    </a>
+                                </div>
+                                <div class="mt60">
                                     <div class="position mt10">
                                         <h5 class="fsize-32 fweight-700 font-agency uppercase">Fun Facts About Me</h5>
                                     </div>
