small CBR update

--- a/soverance.com/Areas/Team/Views/Team/CBR600RA.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/CBR600RA.cshtml
@@ -141,6 +141,11 @@
                                                 <img src="/images/team/CBR600RA/hankaaron.jpg" alt="" class="img-responsive mlr-auto mb20">
                                             </a>
                                         </p>
+                                        <p class="col-lg-4 col-md-4 col-sm-12 col-sm-12 m0">
+                                            <a href="/images/team/CBR600RA/jeepfest.jpg" data-lightbox="game-slides">
+                                                <img src="/images/team/CBR600RA/jeepfest.jpg" alt="" class="img-responsive mlr-auto mb20">
+                                            </a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +220,7 @@
                                     <div class="customparts-bl">
                                         <div id="progressline0" class="progress-line mb30">
                                             <div class="progress-title">
-                                                Paint - Electron Blue Pearl (Honda OEM B95P)
+                                                Paint - Elkhart Lake Blue Metallic (2019 Corvette)
                                             </div>
                                         </div>
                                         <div id="progressline0" class="progress-line mb30">
@@ -321,6 +326,11 @@
                                         <div id="progressline0" class="progress-line mb30">
                                             <div class="progress-title">
                                                 Driven Racing PAIR system block off plates
+                                            </div>
+                                        </div>
+                                        <div id="progressline0" class="progress-line mb30">
+                                            <div class="progress-title">
+                                                Tripage LED Smoked Turn-Signal Mirrors
                                             </div>
                                         </div>
                                     </div>
