--- a/soverance.com/Areas/Team/Views/Team/Index.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/Index.cshtml
@@ -65,7 +65,7 @@
                             Scott's Motorcycle
                         </div>
                         <div class="social mt20">
-                            <a href="#">
+                            <a href="/team/CBR600RA">
                                 <i class="fa fa-motorcycle" aria-hidden="true"></i>
                             </a>
                         </div>
@@ -76,14 +76,14 @@
                         <img src="~/images/team/Person-Silhouette.png" alt="" class="img-responsive">
                     </div>
                     <div class="text-container background-4 text-center">
-                        <a href="#" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
+                        <a href="/jobs" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
                             This could be you!
                         </a>
                         <div class="position mt10">
-                            Game Developer
+                            See available jobs
                         </div>
                         <div class="social mt20">
-                            <a href="#">
+                            <a href="/jobs">
                                 <i class="fa fa-gamepad" aria-hidden="true"></i>
                             </a>
                         </div>
