--- a/soverance.com/Views/Home/FAQ.cshtml
+++ b/soverance.com/Views/Home/FAQ.cshtml
@@ -160,7 +160,7 @@
                             <div class="collapse spoiler-hidden plr20" id="spoiler-9">
                                 <div class="open-bl">
                                     <p>
-                                        As a Microsoft Partner, Soverance Studios works exclusively within Windows environments, and we provide contractors with technical support for their Windows machines.
+                                        As a Microsoft Partner, Soverance Studios works exclusively within Windows environments, and we provide all contractors with technical support for their Windows machines.
                                         Additionally, we provide certain contractors with an Office 365 subscription and @@soverance.com email address, as well as access to company internal resources in Azure.
                                     </p>
                                     <p>
