--- a/soverance.com/Views/Shared/Error.cshtml
+++ b/soverance.com/Views/Shared/Error.cshtml
@@ -7,13 +7,13 @@
     <div class="table-row">
         <div class="table-cell valign-middle text-center">
             <div>
-                <img src="~/images/error/404-img.png" alt="">
+                <img src="~/images/error/error-shield.png" alt="">
             </div>
             <div class="title-error mt30">
                 <h2 class="text-danger">An error occurred while processing your request.</h2>
                 <br />
                 <p>
-                    <strong>Response Code:</strong> <code>@ViewData["responseCode"]</code>
+                    <strong>Response Code:</strong> <code>@ViewData["statusCode"]</code>
                 </p>
                 <p>
                     <strong>Error Message:</strong> <code>@ViewData["message"]</code>
