--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -40,7 +40,7 @@
                     </div>
                     <ul class="list-1 pt10">
                         <li class="color5">
-                            Soverance is a Microsoft Partner.
+                            Soverance is a Microsoft Silver Partner.
                         </li>
                         <li class="color5">
                             Much of our work is open source <a href="https://github.com/soverance">on GitHub</a>!
